    ADDED: new toolbar for actions. use view->show actions toolbar. you'll need to 
           remove ~/.kde/share/apps/krusaderui.rc to see it
    UPDATED: remoteman was disabled. from now on, bookmark manager only
    ADDED: refresh-in-the-background for remote urls and for archives
    ADDED: changing the coloumns by right clicking on the panel's header
    ADDED: color scheme export/import
    ADDED: an other .desktop-file with the red icon that starts krusader as root
    ADDED: useraction: now every placeholder can cancel the execution. (-> %_ask(..)%)
    ADDED: useraction: new placeholder: %_PanelSize(percent)%
    ADDED: Synchronizer, pause/resume button for synchronize with kget
    ADDED: disk usage (tools menu + 3rd panel)
    ADDED: useraction: new placeholder: %_Move(src, dest)%
    ADDED: useraction: new placeholder: %_Each%
    ADDED: full viewer in the 3rd hand
    ADDED: shift-del deletes and doesn't move to trash
    ADDED: splitter: pre-defined 650MB and 700MB CD-R
    ADDED: more Konfigurator Tooltips    
    ADDED: usermenu: entry to open konfigurator with the useraction-page directly
    ADDED: import/export of keyboard shortcuts
    ADDED: mouse selection modes are back! thanks to heiner for doing the work

    FIXED: ftp_vfs overloads the CPU at stepping into a slow server on the network
    FIXED: krusader's detection of old or incompatible versions
    FIXED: dirk's patch for better looking icons
    FIXED: cannot open FTP proxy bookmarks
    FIXED: [ 1101237 ] the reload shortcut is always set to Ctrl+R at startup
    FIXED: rename extension bug in kde 3.3
    FIXED: crash on startup due to restoring of last size and position
    FIXED: couldn't sort case sensative on some systems (see KDE bug #40131)
    FIXED: resizing of the main window produces strange effencts
    FIXED: double dragging in Krusader and Konqueror selection modes
    FIXED: right click menu and user action ID turmoil    