@@ -1,3 +1,4 @@
+    ADDED: Primitive scripting support; Warning: very alpha!!
     ADDED: new toolbar for actions. use view->show actions toolbar. you'll need to 
            remove ~/.kde/share/apps/krusaderui.rc to see it
     UPDATED: remoteman was disabled. from now on, bookmark manager only
